refactor: move code to a special ENVs file

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ Temporary Items
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,c++,c,macos
+
+credentials.h
